Fix message and topic text wrapping

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -607,6 +607,7 @@ button,
 #windows .header .topic {
 	color: #777;
 	margin-left: 8px;
+	word-break: break-all;
 }
 
 #windows .window .header {
@@ -699,6 +700,7 @@ button,
 
 #chat .messages {
 	display: table;
+	table-layout: fixed;
 	width: 100%;
 	padding: 10px 0;
 }
@@ -752,14 +754,6 @@ button,
 #chat .text {
 	padding-left: 10px;
 	padding-right: 6px;
-}
-
-#chat .wrap,
-#chat .text a {
-	font-style: normal;
-	word-break: break-all;
-	word-wrap: break-word;
-	display: inline-block;
 }
 
 #chat .self .text {
